--- a/compose_flask/Dockerfile
+++ b/compose_flask/Dockerfile
@@ -1,5 +1,8 @@
-FROM python:2.7
-ADD . /code
-WORKDIR /code
+FROM python:3.6
+ADD . /coder
+WORKDIR /coder
+EXPOSE 5000
+COPY requirements.txt /coder
 RUN pip install -r requirements.txt
+COPY app.py /coder
 CMD python app.py
