--- a/compose_flask/docker-compose.yml
+++ b/compose_flask/docker-compose.yml
@@ -1,12 +1,26 @@
-version: '2'
+version: "3.8"
 services:
     web:
         build: .
         ports:
             - "5000:5000"
         volumes:
-            - .:/code
+            - .:/coder
         depends_on:
             - redis
+        links:
+            - db
+    db:
+        image: mysql:5.7
+        ports:
+            - "3306:3306"
+        environment:
+            MYSQL_ROOT_HOST: "%"
+            MYSQL_DATABASE: carford_db
+            MYSQL_ROOT_PASSWORD: root
+            MYSQL_USER: carford
+            MYSQL_PASSWORD: carford123
+        volumes:
+            - ../app/db:/docker-entrypoint-initdb.d/:ro
     redis:
         image: redis
