--- a/compose_flask/docker-compose.yml
+++ b/compose_flask/docker-compose.yml
@@ -15,11 +15,10 @@ services:
         ports:
             - "3306:3306"
         environment:
-            MYSQL_ROOT_HOST: "%"
             MYSQL_DATABASE: carford_db
             MYSQL_ROOT_PASSWORD: root
-            MYSQL_USER: carford
-            MYSQL_PASSWORD: carford123
+            MYSQL_USER: cardford
+            MYSQL_PASSWORD: cardford123
         volumes:
             - ../app/db:/docker-entrypoint-initdb.d/:ro
     redis:
